vivanina/demo/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vivanina
  name: vivanina
  namespace: vivanina-demo
  annotations:
    flux.weave.works/automated: "true"
    flux.weave.works/tag.tiller: "glob:demo-*"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vivanina
  template:
    metadata:
      labels:
        app: vivanina
    spec:
      enableServiceLinks: false
      imagePullSecrets:
      - name: srueg-dockerhub
      containers:
      - name: django
        image: docker.io/srueg/vivanina:demo-107
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8000
        livenessProbe:
          initialDelaySeconds: 60
          httpGet:
            port: http
            path: /healthz
        readinessProbe:
          initialDelaySeconds: 3
          httpGet:
            port: http
            path: /healthz
        volumeMounts:
        - name: gcloud-credentials
          mountPath: /run/secrets/gcloud/
          readOnly: true
      volumes:
      - name: gcloud-credentials
        secret:
          secretName: gcloud-credentials
