vivanina/demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vivanina
  name: vivanina
  namespace: vivanina-demo
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: vivanina
