vivanina/demo/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
  name: vivanina
  namespace: vivanina-demo
  labels:
    app: vivanina
spec:
  rules:
  - host: demo.vivanina.ch
    http:
      paths:
      - backend:
          serviceName: vivanina
          servicePort: http
        path: /
  tls:
  - hosts:
    - demo.vivanina.ch
    secretName: vivanina-tls
